; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_add_wait_queue.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_add_wait_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.__wait_queue = type { i32 }

@WQ_FLAG_EXCLUSIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_wait_queue(%struct.TYPE_4__* %0, %struct.__wait_queue** %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.__wait_queue**, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.__wait_queue*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store %struct.__wait_queue** %1, %struct.__wait_queue*** %4, align 8
  %7 = load %struct.__wait_queue**, %struct.__wait_queue*** %4, align 8
  %8 = load %struct.__wait_queue*, %struct.__wait_queue** %7, align 8
  store %struct.__wait_queue* %8, %struct.__wait_queue** %6, align 8
  %9 = load i32, i32* @WQ_FLAG_EXCLUSIVE, align 4
  %10 = xor i32 %9, -1
  %11 = load %struct.__wait_queue*, %struct.__wait_queue** %6, align 8
  %12 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @spin_lock_irqsave(i32* %16, i64 %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = load %struct.__wait_queue*, %struct.__wait_queue** %6, align 8
  %21 = call i32 @__add_wait_queue(%struct.TYPE_4__* %19, %struct.__wait_queue* %20)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64, i64* %5, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* %23, i64 %24)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__add_wait_queue(%struct.TYPE_4__*, %struct.__wait_queue*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
